tests/component_syntax_includes/component_syntax_includes.exp
Error --------------------------------------------------------------------------------------------------- exclude.js:1:8

Component syntax is not supported [unsupported-syntax]

   1| export component FooX() { return null }
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- exclude.js:2:16

Component syntax is not supported [unsupported-syntax]

   2| declare export component BarX(x: number);
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- exclude.js:3:20

Component syntax is not supported [unsupported-syntax]

   3| export const BazX: component() = (42: any);
                         ^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- import.js:5:12

Cannot create `Foo` element because property `x` is missing in component config [1] but exists in props [2].
[prop-missing]

   import.js:5:12
   5| const x = <Foo x={42}/>; // error
                 ^^^

References:
   include.js:1:21
   1| export component Foo() { return null }
                          ^^ [1]
   import.js:5:11
   5| const x = <Foo x={42}/>; // error
                ^^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:6:12

Cannot create `Bar` element because property `x` is missing in props [1] but exists in component config [2].
[prop-missing]

   import.js:6:12
   6| const y = <Bar />; //error
                 ^^^

References:
   import.js:6:11
   6| const y = <Bar />; //error
                ^^^^^^^ [1]
   include.js:2:29
   2| declare export component Bar(x: number);
                                  ^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- import.js:7:12

Cannot create `Baz` element because property `z` is missing in component config [1] but exists in props [2].
[prop-missing]

   import.js:7:12
   7| const z = <Baz z={42} />; // error
                 ^^^

References:
   include.js:3:28
   3| export const Baz: component() = (42: any);
                                 ^^ [1]
   import.js:7:11
   7| const z = <Baz z={42} />; // error
                ^^^^^^^^^^^^^^ [2]



Found 6 errors
